A fix (bug #4802 prompt in mysql client shows wrong database after dropping default db).